# aipriceaction-proxy

./: .env.example  .env.public-node-example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.simple  PLAN_INTEGRATION_CLI.md  README.md  README_TEST.md  debug_test.py  docker-compose.amd64.yml  docker-compose.arm.yml  docker-compose.test.yml  docker-compose.yml  start_server.sh  test_api_comprehensive.py  ticker_group.json
.github/workflows/: docker-build-push.yml
cli/: Cargo.toml  GUIDE_PARALLEL.md  README.md
cli/examples/: ai_prompts.rs  basic_analysis.rs  builder_pattern.rs
cli/src/: lib.rs  main.rs
cli/src/api/: analyzer.rs  builder.rs  mod.rs
cli/src/ask_ai/: context_builders.rs  formatters.rs  handler.rs  ma_score_context.rs  mod.rs  money_flow_context.rs  types.rs  utils.rs
cli/src/ask_ai/templates/: mod.rs  money_flow_en.rs  money_flow_vn.rs  multi_en.rs  multi_vn.rs  single_en.rs  single_vn.rs
cli/src/models/: cache.rs  ma_score.rs  mod.rs  stock_data.rs  ticker.rs
cli/src/services/: cache_manager.rs  csv_service.rs  live_service.rs  mod.rs  request_queue.rs
cli/src/state_machine/: context.rs  mod.rs  states.rs  transitions.rs
cli/src/states/: fetch_csv.rs  fetch_live.rs  ma_score.rs  mod.rs  money_flow.rs  ready.rs
cli/src/utils/: date.rs  logger.rs  matrix_utils.rs  mod.rs  money_flow_utils.rs  vectorized_ma_score.rs  vectorized_money_flow.rs
docs/: API_REFERENCE.md  GETTING_STARTED.md  README.md  TESTING_GUIDE.md
docs/ideas/: 001_initial.md
examples/: vci_example.rs
examples/configs/: node.yml  node1.yml  node2.yml  node3.yml
scripts/: README.md  docker-build-and-tag.sh  docker-push.sh  health-check.sh  test-multi-node.sh  test-office-hours.sh
src/: analysis_service.rs  api.rs  config.rs  data_structures.rs  lib.rs  main.rs  tcbs.rs  vci.rs  worker.rs
src/utils/: cache.rs
