[package]
name = "aipriceaction-proxy"
version = "0.1.0"
edition = "2024"

[[example]]
name = "vci_example"
path = "examples/vci_example.rs"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
nextest-runner = "0.85.0"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "gzip", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower_governor = "0.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
