[package]
name = "aipriceaction-proxy"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "aipriceaction-proxy"
path = "src/main.rs"

[[example]]
name = "vci_example"
path = "examples/vci_example.rs"

[dependencies]
# CLI module for market analysis
aipriceaction = { path = "./cli", default-features = false }

axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["query"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
csv = "1.3"
dotenvy = "0.15"
futures = "0.3"
nextest-runner = "0.85.0"
num_cpus = "1.16"
rand = "0.9.2"
rayon = "1.8"
reqwest = { version = "0.12.23", features = ["json", "gzip", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tower_governor = "0.8.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
