[package]
name = "aipriceaction"
version = "0.1.0"
edition = "2021"
description = "Vietnamese stock market analysis library with vectorized money flow calculations and AI prompt generation"
license = "MIT OR Apache-2.0"
authors = ["aipriceaction contributors"]
repository = "https://github.com/quanhua92/aipriceaction-ui"
homepage = "https://github.com/quanhua92/aipriceaction-ui"
keywords = ["finance", "stocks", "analysis", "money-flow", "vietnamese-market"]
categories = ["finance", "data-structures", "algorithms"]
readme = "README.md"
documentation = "https://docs.rs/aipriceaction"

[[bin]]
name = "aipriceaction"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# CSV parsing
csv = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde", "clock", "std"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Regex for text parsing
regex = "1.10"

# File operations
tempfile = "3.8"
uuid = { version = "1.6", features = ["v4"] }

# Async trait support
async-trait = "0.1"
futures = "0.3"

# Parallel processing for performance
rayon = "1.8"